sna/dri: Swallow error from GetMSC

Just ignore the error return from WaitVBlank and make up a value for
last MSC/SBC similar to an unattached Drawable.

Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=55395
Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>